fix dark mode and resize picture

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -103,6 +103,13 @@ blockquote {
       align-items: center;
     }
   }
+  // for teaching page
+  .list-group-item {
+    background-color: var(--global-card-bg-color); border-color: var(--global-divider-color);
+  }
+  .badge {
+    background-color: var(--global-theme-color); padding-left: 1rem; padding-right: 1rem;
+  }
 }
 
 // Citation
